--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="error">Error</string>
     <string name="error_internal">Internal error</string>
 
+    <string name="ok">OK</string>
     <string name="currency_code_hint">Currency code, like USB, RUB…</string>
     <string name="add_currency">Add currency</string>
     <string name="old_values_warning">Calculation of currencies is carried out at outdated exchange rates - %s</string>
